# GbDebugger

./: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  Makefile.am  configure.ac  setuplinks.sh
.github/workflows/: automake.yml  cmake.yml
Include/: Sample
Include/GbDebugger/.Config/: ConfiguredDebugger.h.in  PreConfigDebugger.msvc.h
Include/GbDebugger/Common/: DebuggerProject.h  DebuggerSettings.h  DebuggerTypes.h  DebuggerUtils.h  SampleDocument.h  SampleSettings.h
Include/GbDebugger/GbaMan/: BaseCpuCore.h  BaseDisCpu.h  CpuUtils.h  GbaManager.h  MemoryManager.h  MemoryTable.h
Lib/: CMakeLists.txt  Makefile.am
Lib/.Config/: CMakeLists.txt  Makefile.am
Lib/.LinkerScript/: Common.in  Gba.in  Images.in  LinkerScripts.m4
Lib/Common/: CMakeLists.txt  Makefile.am  SampleDocument.cpp
Lib/Common/Tests/: DebuggerProjectTest.cpp  DebuggerTypesTest.cpp  SampleDocumentTest.cpp  SampleSettingsTest.cpp  TestConf.cmake  TestConf.mak
Lib/Gba/: CMakeLists.txt  Makefile.am
Lib/Gba/Tests/: TestConf.mak
Lib/GbaMan/: BaseCpuCore.cpp  BaseCpuCore.h  BaseDisCpu.cpp  CMakeLists.txt  GbaManager.cpp  Makefile.am  MemoryManager.cpp
Lib/GbaMan/CpuArm/: ArithmeticLogic.inl  ArmALU.cpp  ArmALU.h  ArmBranch.cpp  ArmInstTable.h  ArmLdrStr.cpp  ArmPsr.cpp  ArmStrLdr.cpp  Branch.cpp  CpuArm.cpp  CpuArm.h  DisArm.cpp  DisArm.h  InstTable.h  InstTable.md  OperatorConst.h  StoreLoad.cpp  StoreLoad.inl
Lib/GbaMan/CpuThumb/: Branch.inl  CpuThumb.cpp  CpuThumb.h  DisThumb.cpp  DisThumb.h  InstTable.h  InstTable.md  OperateRegister.inl  StoreLoad.inl  ThumbInstTable.h
Lib/GbaMan/Tests/: CpuUtilsTest.cpp  GbaManagerTest.cpp  MemoryManagerTest.cpp  TestConf.cmake  TestConf.mak  hello.gba
Lib/GbaMan/Utils/: DisUtils.inl  ShiftOperator.h
Lib/Images/: CMakeLists.txt  Makefile.am
