
##----------------------------------------------------------------
##
##    プロジェクトの基本設定。
##


##----------------------------------------------------------------
##
##    サブディレクトリの追加。
##

add_subdirectory(Tests)
add_subdirectory(.Config)

add_subdirectory(Common)
add_subdirectory(GbaMan)
add_subdirectory(Images)

